...
        android:layout_marginLeft="60dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        >

        <TextView
            android:text="Today, June 24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_date_textview"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"
            android:layout_gravity="left"
            />
        <!--in lesson IDs are same as in list_item_forecast.mxl-->
...
