...
            android:orientation="vertical"
            android:minWidth="56dp"
            >

            <!-- Header: Day, Date -->
            <TextView
                android:id="@+id/fragment_detail_day_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:minWidth="120dp"
...
