<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map Location</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="share_menu_item" translatable="true">Share</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
...
